# citlalmina

./: abrazo.txt  acercade.txt  auto1.txt  bansimagen.txt  besoimagen.txt  bolaocho.txt  console.py  despedida.txt  equipo.txt  espachimagen.txt  gransimagen.txt  help.txt  helpad.txt  helplang.txt  hijri.py  invitarinquisidor.txt  lgbtqplus.txt  main.py  mattimagen.txt  memeimagen.txt  msgdia.txt  noticia.txt  pendejo.txt  pyproject.toml  rocket.txt  scorimagen.txt  sniperimagen.txt  sobrethel.txt  swordimagen.txt  teaimagen.txt  wraith.txt  xiuhpohualli.py  yolmelahualiztin.txt
