[tool.poetry]
name = "citlalmina"
version = "5.8.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
linereader = "^1.0.0"
flask = "^1.1.2"
bs4 = "^0.0.1"
asyncpraw = "^7.5.0"
ffmpeg = "^1.4"
pafy = "^0.5.5"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
pytz = "^2021.3"
hijri-converter = "^2.2.2"
deep-translator = "^1.5.5"
googletrans = "^3.1.0a0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"